Fix sidebar not collapsing after breakpoint change. Make h4-h6 sizes match BS3.

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -204,6 +204,9 @@ iframe {
 		padding-left: 40px;
 	}
 }
+#main-course-menu li.header {
+    padding-top: 0.5rem;
+}
 
 /* panels */
 .module-panel .panel-heading {
